Fix the build on Solaris

http://bugzilla.gnome.org/show_bug.cgi?id=663991